--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -658,7 +658,7 @@ if(CRADLE_INSTALL)
             cradle_inner cradle_typing lib_third_party cradle_plugins_inner
             cradle_plugins_typing cradle_thinknode
             cradle_rpclib_client cradle_websocket cradle_external cppcoro
-            tomlplusplus_tomlplusplus rpclib
+            tomlplusplus_tomlplusplus rpc
         EXPORT CradleTargets
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
