Change resolve_request() logic
Prepare phasing out sync/async distinction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,6 +253,9 @@ elseif(IS_MSVC)
     # "operator '|': deprecated between enumerations of different types"
     # in cereal\external\rapidjson\document.h
     add_compile_options(/wd5054)
+    # The "unreachable code" warning is never to the point, and due to lack of
+    # context impossible to fix.
+    add_compile_options(/wd4702)
 endif()
 
 # Use absolute paths for error messages.
