Type-erase caching level and introspective
The caching level and introspection flag are no longer part of the function_request type,
but are now part of the function_request_impl type.
The consequence is that a request tree can contain requests with different caching levels
and/or introspection. The only restriction left is that all requests should have the same
type of function: plain or coroutine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,6 +257,11 @@ elseif(IS_MSVC)
     # context impossible to fix.
     add_compile_options(/wd4702)
 endif()
+if(IS_GCC)
+    # Unclear what these warnings exactly mean to say, and whether they are valid.
+    # Clang and MSVC don't complain.
+    add_compile_options(-Wno-subobject-linkage)
+endif()
 
 # Use absolute paths for error messages.
 if (IS_CLANG)
