Optional blob file serialization
Each secondary_storage_intf implementation decides whether it wants a file blob to be stored as
a reference to the file, or as inline data. E.g. the local disk cache wants the reference, but
an HTTP cache wants inline data.
The "allow blob files" flag is passed on to a msgpack_packer object wrapping the original msgpack packer.
All occurrences of the original packer (i.e., msgpack::pack() calls) have been replaced by msgpack_packer.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,9 @@ set_source_files_properties(
 # Define a library containing basic test support.
 add_library(basic_test_support
     support/common.cpp
-    support/inner_service.cpp)
+    support/inner_service.cpp
+    support/make_test_blob.cpp
+    support/simple_storage.cpp)
 add_dependencies(basic_test_support
     deploy_dir_file_target)
 target_link_libraries(basic_test_support PUBLIC
