--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -10,7 +10,7 @@ env:
 jobs:
 
   preprocess:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v4
@@ -20,7 +20,7 @@ jobs:
     # TODO: The preprocessing job shouldn't require vcpkg.
     - uses: friendlyanon/setup-vcpkg@v1
       with:
-        committish: 7ba0ba7334c3346e7eee1e049ba85da193a8d821
+        committish: 0ed3bfe969b2f95ad45f431c5ea482a69f132a67
 
     - name: Install
       run: |
